fix: user's errors y added feaure tests
