# packages/backend/src/modules/User/infrastructure/persistence/UserRepository.ts
@@ -2,30 +2,32 @@ import { User } from '../../domain/User';
 import type { IUserRepository } from '../../domain/IUserRepository';
 import { PrismaClient } from '@prisma/client';
 import 'reflect-metadata';
-import { container, injectable } from 'tsyringe';
+import { inject, injectable } from 'tsyringe';
 import { UserEmail } from '../../domain/UserEmail';
 import { UserFirstname } from '../../domain/UserFirstname';
 import { UserId } from '../../domain/UserId';
 import { UserLastname } from '../../domain/UserLastname';
 import { UserPassword } from '../../domain/UserPassword';
 import { UserPhone } from '../../domain/UserPhone';
+import { IHashService } from '../../domain/services/IHashService';
 
 @injectable()
 export class UserRepository implements IUserRepository {
   private prisma: PrismaClient;
 
-  constructor() {
+  constructor(@inject('HashService') private readonly hashService: IHashService) {
     this.prisma = new PrismaClient();
   }
 
   async create(userData: User): Promise<void> {
+    const hashedPassword = await this.hashService.hash(userData.password.toString());
     await this.prisma.user.create({
       data: {
         id: userData.id.value,
         firstname: userData.firstname.toString(),
         lastname: userData.lastname.toString(),
         email: userData.email.toString(),
-        password: userData.password.toString(),
+        password: hashedPassword,
         cell_phone: userData.phone.toString(),
         role_id: '38d436a9-f512-4e95-b871-553bab740e7a',
       },
@@ -40,7 +42,7 @@ export class UserRepository implements IUserRepository {
           new UserFirstname(userData.firstname),
           new UserLastname(userData.lastname),
           new UserEmail(userData.email),
-          new UserPassword(userData.password, container.resolve('HashService')),
+          new UserPassword(userData.password),
           new UserPhone(userData.cell_phone),
         )
       : null;
@@ -54,7 +56,7 @@ export class UserRepository implements IUserRepository {
           new UserFirstname(userData.firstname),
           new UserLastname(userData.lastname),
           new UserEmail(userData.email),
-          new UserPassword(userData.password, container.resolve('HashService')),
+          new UserPassword(userData.password),
           new UserPhone(userData.cell_phone),
         )
       : null;
@@ -68,7 +70,7 @@ export class UserRepository implements IUserRepository {
           new UserFirstname(userData.firstname),
           new UserLastname(userData.lastname),
           new UserEmail(userData.email),
-          new UserPassword(userData.password, container.resolve('HashService')),
+          new UserPassword(userData.password),
           new UserPhone(userData.cell_phone),
         ),
     );
